--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,3 @@
-/* ROBOTO MONO X AHORA NO
-  @import url(https://fonts.bunny.net/css?family=roboto-mono:400);
-  @import url(https://fonts.bunny.net/css?family=roboto-mono:400,400i); */
-
 @font-face {
   font-family: "supplyregular";
   src: url("../font/supply-regular-webfont.woff2") format("woff2"),
@@ -10,10 +6,6 @@
   font-weight: normal;
   font-style: normal;
 }
-
-/* html {
-      height: 100vh;
-  } */
 
 :root {
   --amarillo: #ffd300;
@@ -30,13 +22,16 @@ html {
   min-height: 100%;
 }
 
+/* html {
+      height: 100vh;
+  } */
+
 ::selection {
   color: var(--blanco);
   background: var(--violeta);
 }
 
 body {
-  /* font-family: "Roboto Mono", monospace; */
   cursor: none;
   display: flex;
   flex-direction: column;
@@ -55,17 +50,32 @@ body {
 header {
   display: flex;
   justify-content: space-between;
-  margin: 0 1.5em;
+  margin: 0px 0.5em;
+}
+
+@media screen and (min-width: 480px) {
+  header {
+    margin: 0 1.5em;
+  }
 }
 
 footer {
-  bottom: 1em;
-  line-height: 1;
-  margin: 0px 1.5em 0.5em;
-  position: sticky;
-  z-index: 200;
+  background-color: var(--blanco);
+  bottom: 0;
   display: flex;
   justify-content: space-between;
+  line-height: 1;
+  padding: 0.8em 0.5em 0.8em;
+  position: sticky;
+  z-index: 200;
+}
+
+@media screen and (min-width: 480px) {
+  footer {
+    background-color: transparent;
+    bottom: 0.8em;
+    padding: 0 1.5em 0;
+  }
 }
 
 .ingles {
@@ -82,32 +92,29 @@ footer {
 .ingles:hover::after {
   background: black;
   content: "";
-  width: 100%;
   height: 100%;
+  left: 0;
+  opacity: 1;
   position: absolute;
   top: 0;
-  left: 0;
-  z-index: -1;
   transform: skew(15deg);
-  opacity: 1;
+  width: 100%;
+  z-index: -1;
 }
 
 .ingles:hover {
   color: var(--blanco);
 }
 
-/* .main-home #main-cursor {
-    background-color: var(--rojo);
-  } */
-
 #main-cursor,
 #follow-cursor {
   background-color: var(--rojo);
-  z-index: 250;
+  border-radius: 50%;
+  display: none;
+  mix-blend-mode: darken;
   pointer-events: none;
   position: absolute;
-  border-radius: 50%;
-  /* mix-blend-mode: darken; */
+  z-index: 250;
 }
 
 #main-cursor {
@@ -115,14 +122,21 @@ footer {
   width: 7px;
 }
 
+@media screen and (min-width: 480px) {
+  #main-cursor,
+  #follow-cursor {
+    display: block;
+  }
+}
+
 .flecha {
-  z-index: 250;
+  color: black;
+  display: none;
+  font-size: 2.5rem;
   pointer-events: none;
   position: absolute;
-  color: var(--azul);
-  font-size: 3rem;
-  display: none;
   transition: color 0.1s ease-in;
+  z-index: 250;
 }
 
 #follow-cursor {
@@ -136,18 +150,18 @@ footer {
 
 .main-catalogo #main-cursor {
   background-color: transparent;
-  width: 0;
-  height: 0;
-  border-top: 10px solid transparent;
-  border-right: 20px solid var(--amarillo);
   border-bottom: 10px solid transparent;
-  transform: rotate(55deg);
   border-radius: 0%;
+  border-right: 20px solid var(--amarillo);
+  border-top: 10px solid transparent;
+  height: 0;
+  mix-blend-mode: normal;
+  transform: rotate(55deg);
   transition: opacity 0.2s ease-in-out;
+  width: 0;
 }
 
 .main-catalogo #follow-cursor {
-  /* background-color: var(--amarillo); */
   display: none;
 }
 
@@ -176,21 +190,21 @@ a {
 .logo:hover::after {
   background-color: var(--verde);
   content: "";
-  width: 100%;
   height: 100%;
+  left: 0;
+  opacity: 1;
   position: absolute;
   top: 0;
-  left: 0;
-  z-index: -1;
   transform: skew(-15deg);
-  opacity: 1;
+  width: 100%;
+  z-index: -1;
 }
 
 .link {
   line-height: 1;
   padding: 0.6em 1em;
-  z-index: 200;
   transition: background-color 0.2s ease, color 0.2s ease;
+  z-index: 200;
 }
 
 .rojo:hover {
@@ -198,8 +212,7 @@ a {
 }
 
 .azul {
-  /* border-radius: 40px; */
-  border-radius: 3em;
+  border-radius: 40px;
 }
 
 .azul:hover:not(.catalogo) {
@@ -209,11 +222,6 @@ a {
 .catalogo {
   color: var(--azul);
 }
-
-/* .draggable {
-    margin: 0 auto;
-    z-index: 2;
-  } */
 
 .body-home img {
   cursor: grab;
@@ -226,27 +234,49 @@ a {
 }
 
 main:not(.main-catalogo) {
-  margin: 1em 2.5em;
+  margin: 1em 1.5em;
   padding: 0;
 }
 
+@media screen and (min-width: 480px) {
+  main:not(.main-catalogo) {
+    margin: 1em 2.5em;
+  }
+}
+
 .main-home {
-  flex-grow: 2;
-  display: grid;
-  grid-template-columns: 1fr 2fr 2fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 1em;
+  display: block;
+}
+
+@media screen and (min-width: 480px) {
+  .main-home {
+    flex-grow: 2;
+    display: grid;
+    gap: 1em;
+    grid-template-columns: 1fr 2fr 2fr;
+    grid-template-rows: 1fr 1fr;
+  }
+}
+
+.home-photo {
+  display: none;
+}
+
+@media screen and (min-width: 480px) {
+  .home-photo {
+    display: block;
+  }
 }
 
 .home-photo:nth-child(1) {
+  align-self: center;
   grid-column: 1/3;
   justify-self: center;
-  align-self: center;
 }
 
 .home-photo:nth-child(2) {
-  justify-self: baseline;
   align-self: baseline;
+  justify-self: baseline;
 }
 
 .home-photo:nth-child(3) {
@@ -255,49 +285,76 @@ main:not(.main-catalogo) {
 }
 
 .home-photo:nth-child(4) {
-  justify-self: end;
   align-self: baseline;
+  justify-self: end;
 }
 
 .home-photo:nth-child(5) {
-  justify-self: end;
   align-self: end;
+  justify-self: end;
 }
 
 .main-catalogo {
-  padding: 2.5em 0;
   flex-grow: 2;
+  padding: 3.5em 0;
+}
+
+@media screen and (min-width: 480px) {
+  .main-catalogo {
+    padding: 2.5em 0;
+  }
 }
 
 .filters-list {
   display: flex;
+  column-gap: 0.5rem;
+  flex-wrap: wrap;
   justify-content: center;
-  column-gap: 1rem;
   list-style-type: none;
   margin: 0;
-  padding: 1em 0;
-  flex-wrap: wrap;
+  padding: 0.5em 0;
+}
+
+@media screen and (min-width: 480px) {
+  .filters-list {
+    column-gap: 1rem;
+    padding: 1em 0;
+  }
 }
 
 .filters-nav {
-  width: 100%;
-  z-index: 205;
-  display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
+  display: block;
   padding: 0 1em;
-  align-items: center;
   transition: box-shadow 0.3s ease;
+  width: auto;
+  z-index: 205;
+}
+
+@media screen and (min-width: 480px) {
+  .filters-nav {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 3fr 1fr;
+    width: 100%;
+  }
 }
 
 .fixed-nav .filters-nav {
-  position: fixed;
-  box-shadow: 0 1px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 1px rgba(0, 0, 0, 0.1); */
   background-color: var(--blanco);
+  position: fixed;
   top: 0px;
 }
 
 .filters-nav .logo-wrapper {
+  display: none;
   opacity: 0;
+}
+
+@media screen and (min-width: 480px) {
+  .filters-nav .logo-wrapper {
+    display: block;
+  }
 }
 
 .fixed-nav .filters-nav .logo-wrapper {
@@ -306,10 +363,10 @@ main:not(.main-catalogo) {
 }
 
 .filter {
-  padding: 0.6em 1em;
-  cursor: none;
-  transition: background-color 0.2s ease, color 0.2s ease;
   border-radius: 40px;
+  cursor: none;
+  padding: 0.6em 1em;
+  transition: background-color 0.2s ease, color 0.2s ease;
 }
 
 .filter:hover:not(.current) {
@@ -333,49 +390,41 @@ button {
 }
 
 .grilla-fotos {
-  padding: 4em 9em;
   display: grid;
-  column-gap: 2rem;
-  row-gap: 2rem;
   align-items: center;
-  justify-items: center;
-  justify-content: space-between;
+  column-gap: 2rem;
   grid-template-columns: repeat(auto-fill, minmax(min(10rem, 100%), 1fr));
+  justify-content: space-between;
+  justify-items: center;
+  padding: 4em 4em;
+  row-gap: 2rem;
   -webkit-animation: fade-in 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
   animation: fade-in 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
+@media screen and (min-width: 480px) {
+  .grilla-fotos {
+    padding: 4em 9em;
+  }
+}
+
 .foto {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
 .foto img {
-  max-width: 100%;
+  cursor: zoom-in;
   height: auto;
   max-height: 10em;
-  cursor: zoom-in;
+  max-width: 100%;
 }
 
-/* .tooltip {
-  background: var(--blanco);
-  border-radius: 4px;
-  border: 1px solid black;
-  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
-  color: black;
-  font-size: 12px;
-  font-style: italic;
-  padding: 10px 20px;
-  position: fixed;
-  text-align: center;
-  z-index: 300;
-} */
-
 .shrug {
-  font-size: 1.2em;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: black;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1.2em;
   padding: 20px 0;
   position: fixed;
   text-align: center;
@@ -385,20 +434,20 @@ button {
 #carousel-window {
   background-color: var(--blanco);
   display: none;
-  opacity: 0;
   height: 100%;
   inset: 0;
+  opacity: 0;
   position: fixed;
-  z-index: 210;
   width: auto;
+  z-index: 210;
 }
 
 #carousel {
   display: flex;
-  align-items: center;
-  justify-content: center;
   /* gap: 3rem; */
+  align-items: center;
   height: 100%;
+  justify-content: center;
   width: auto;
 }
 
@@ -408,30 +457,35 @@ button {
 }
 
 .slide-wrapper {
+  align-items: center;
   display: flex;
   height: 80%;
-  align-items: center;
 }
 
 .slide-wrapper img {
-  /* height: auto; */
   max-height: 100%;
-  /* max-width: 100%; */
+  max-width: 100%;
 }
 
 #carousel-close {
   background: url(../close-carousel.svg) center no-repeat;
-  background-size: 2rem;
+  background-size: 1.5rem;
   cursor: pointer;
-  height: 2rem;
+  height: 1.5rem;
+  margin: 0.5em;
   padding: 1rem;
-  margin: 1rem;
   position: absolute;
   right: 0;
   top: 0;
   transition: transform 1.2s cubic-bezier(0.19, 1, 0.22, 1);
   width: 2rem;
   z-index: 5;
+}
+
+@media screen and (min-width: 480px) {
+  #carousel-close {
+    margin: 1rem;
+  }
 }
 
 .carousel-navigation {
@@ -449,16 +503,32 @@ button {
 }
 
 .main-info {
-  display: grid;
-  align-items: center;
-  column-gap: 2rem;
+  display: flex;
+  align-self: flex-start;
+  flex-direction: column;
   flex-grow: 2;
-  grid-template-columns: 2fr 3fr;
+  gap: 1em;
   padding: 0 16px;
+}
+
+@media screen and (min-width: 480px) {
+  .main-info {
+    display: grid;
+    align-items: center;
+    column-gap: 2rem;
+    grid-template-columns: 2fr 3fr;
+  }
 }
 
 #bio {
   text-align: left;
+  order: 1;
+}
+
+@media screen and (min-width: 480px) {
+  #bio {
+    order: 0;
+  }
 }
 
 #bio a:hover {
@@ -472,7 +542,13 @@ button {
 }
 
 .main-info img {
-  max-width: 50%;
+  max-width: 100%;
+}
+
+@media screen and (min-width: 480px) {
+  .main-info img {
+    max-width: 50%;
+  }
 }
 
 #mail {
@@ -533,69 +609,12 @@ button {
   }
 }
 
-@media (orientation: portrait) {
-  .home-photo,
-  #main-cursor,
-  #follow-cursor {
-    display: none;
-  }
-
-  header {
-    margin: 0px 0.5em;
-  }
-
-  .main-home {
-    display: block;
-  }
-
-  footer {
-    margin: 0px 0.5em 0.5em;
-  }
-
-  .main-catalogo {
-    padding: 3.5em 0;
-  }
-
-  .filters-nav .logo-wrapper {
-    display: none;
-  }
-
-  .filters-nav {
-    display: block;
-    width: auto;
-  }
-
-  .filters-list {
-    column-gap: 0.5rem;
-  }
-
-  .grilla-fotos {
-    padding: 4em 4em;
-  }
-
-  .main-info {
-    display: flex;
-    flex-direction: column;
-    align-self: flex-start;
-    gap: 1em;
-  }
-
-  .main-info img {
-    max-width: 100%;
-  }
-
-  main:not(.main-catalogo) {
-    margin: 1em 1.5em;
-    padding: 0;
-  }
-
-  #bio {
-    order: 2;
-  }
-}
-
-@media (orientation: landscape) {
+@media screen and (min-width: 480px) {
   .main-home iframe {
     display: none;
   }
+}
+
+.ytplayer {
+  pointer-events: none;
 }
