--- a/css/styles.css
+++ b/css/styles.css
@@ -210,6 +210,19 @@ a {
   z-index: -1;
 }
 
+#desktop {
+  display: none;
+}
+
+@media screen and (min-width: 480px) {
+  #desktop {
+    display: block;
+  }
+  #mobile {
+    display: none;
+  }
+}
+
 .link {
   line-height: 1;
   padding: 0.6em 1em;
@@ -243,15 +256,7 @@ a {
   animation: tiembla 0.5s ease-out 0s 1 normal forwards;
 }
 
-.main-info {
-  margin: 1em 1.5em;
-  padding: 0;
-}
-
 @media screen and (min-width: 480px) {
-  .main-info {
-    margin: 1em 2.5em;
-  }
   .main-home {
     margin: 10px;
   }
@@ -424,7 +429,7 @@ button {
   grid-template-columns: repeat(auto-fill, minmax(min(10rem, 100%), 1fr));
   justify-content: space-between;
   justify-items: center;
-  padding: 4em 4em;
+  padding: 4em 1.5em;
   row-gap: 2rem;
   -webkit-animation: fade-in 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
   animation: fade-in 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
@@ -445,8 +450,14 @@ button {
 .foto img {
   cursor: zoom-in;
   height: auto;
-  max-height: 10em;
+  max-height: 18em;
   max-width: 100%;
+}
+
+@media screen and (min-width: 480px) {
+  .foto img {
+    max-height: 10em;
+  }
 }
 
 .shrug {
@@ -521,8 +532,8 @@ button {
 }
 
 .fade-in {
-  -webkit-animation: fade-in 0.3s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-  animation: fade-in 0.3s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  -webkit-animation: fade-in 0.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: fade-in 0.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 .fade-out {
@@ -536,7 +547,8 @@ button {
   flex-direction: column;
   flex-grow: 2;
   gap: 1em;
-  padding: 0 16px;
+  margin: 1em 1.5em;
+  padding: 0;
 }
 
 @media screen and (min-width: 480px) {
@@ -545,18 +557,13 @@ button {
     align-items: center;
     column-gap: 2rem;
     grid-template-columns: 2fr 3fr;
+    margin: 1em 2.5em;
   }
 }
 
 #bio {
   text-align: left;
-  order: 1;
-}
-
-@media screen and (min-width: 480px) {
-  #bio {
-    order: 0;
-  }
+  order: 2;
 }
 
 #bio a:hover {
@@ -567,6 +574,13 @@ button {
 .foto-bio {
   display: flex;
   justify-content: center;
+  order: 1;
+}
+
+@media screen and (min-width: 480px) {
+  .foto-bio {
+    order: 3;
+  }
 }
 
 .main-info img {
